Anpassungen für Java 9